# CUDABurner

./: CMakeLists.txt  README.md  main.cpp  main.cu
core/: gpu_props.hpp
monitoring/: monitor.cpp  monitor.hpp
operators/: base_operator.hpp  gemm_fp4_tensorcore.cu  gemm_fp4_tensorcore.hpp  gemm_fp8_tensorcore.cu  gemm_fp8_tensorcore.hpp  gemm_generic.cu  gemm_generic.hpp  gemm_sparse_tensorcore.cu  gemm_sparse_tensorcore.hpp  gemm_tensorcore.cu  gemm_tensorcore.hpp  operator_factory.cpp  operator_factory.cu  operator_factory.hpp  operator_traits.hpp  power_virus_kernel.cu  power_virus_kernel.hpp  vector_add.cu  vector_add.hpp
strategies/: base_strategy.hpp  benchmark_strategy.cpp  benchmark_strategy.hpp  stress_strategy.cpp  stress_strategy.hpp
ui/: tui.cpp  tui.hpp
utils/: helpers.hpp
